Revision history for Perl extension Image::Grab.

0.01  Thu May  7 13:35:42 1998
	- original version; created by h2xs 1.18
