@@ -11,9 +11,13 @@ print "ok 1\n";
 
 ######################### End of black magic.
 
+use lib qw{t};
+use TestDaemon;
+
+my $port = TestDaemon::dotest(1);
+
 my $image = new Image::Grab;
-$image->refer("http://www.eecs.tulane.edu/~mah");
-$image->url("#1");
+$image->url("http://localhost:$port/testdata/perl.gif");
 if($image->grab){
   print "ok 2\n";
 } else {
